docs/wintermute/pihole/shims.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  name: pihole-dhcp-relay
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole-dhcp-relay
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pihole-dhcp-relay
    spec:
      containers:
        - args:
            - --dhcp-relay=192.168.1.3,10.42.0.20
            - --no-daemon
            - --port=0
            - --log-facility=-
            - --user=root
          command:
            - /bin/dnsmasq
          image: alpine:latest
          imagePullPolicy: Always
          name: dhcrelay
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 16Mi
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /bin/dnsmasq
              name: bin
              subPath: dnsmasq
      dnsPolicy: ClusterFirst
      hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: bin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  name: pihole-ipv6-proxy
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole-ipv6-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        app: pihole-ipv6-proxy
    spec:
      containers:
        - args:
            - -conf
            - /etc/coredns/Corefile
          image: coredns/coredns:latest
          imagePullPolicy: Always
          name: coredns
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 32Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/coredns
              name: config
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: pihole-ipv6-dns-config
          name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  name: pihole-ip-watcher
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole-ip-watcher
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pihole-ip-watcher
    spec:
      containers:
        - command:
            - sh
            - -c
            - |
              [...]
          image: bitnami/kubectl:latest
          imagePullPolicy: Always
          name: watcher
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: pihole-ip-watcher
      serviceAccountName: pihole-ip-watcher
      terminationGracePeriodSeconds: 30
