docs/wintermute/pihole/traefik-dns-routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  annotations: {}
  name: pihole-dns-tcp-ingress
  namespace: pihole
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole-dns-tcp
          port: 53
          weight: 10
